# obs-pulseaudio-app-capture

./: CMakeLists.txt  Dockerfile  Dockerfile.ubuntu1804  Dockerfile.ubuntu2004  README.md  buildspec.json
.github/actions/build-plugin/: action.yml
.github/actions/package-plugin/: action.yml
.github/scripts/utils.zsh/: setup_obs
.github/workflows/: clang-format.yml  main.yml
CI/linux/: install-dependencies-ubuntu.sh  package-ubuntu.sh  package.sh
data/locale/: en-US.ini
src/: plugin-macros.h.in  pulse-app-capture.c  pulse-app-input.cpp  pulse-wrapper.c  pulse-wrapper.h
